syntax = "proto3";

package core.corepb.v1;

option go_package = "github.com/obolnetwork/charon/core/corepb/v1";

import "core/corepb/v1/core.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message QBFTMsg {
  int64                          type                  = 1;
  core.corepb.v1.Duty            duty                  = 2;
  int64                          peer_idx              = 3;
  int64                          round                 = 4;
  reserved                                               5 ;
  int64                          prepared_round        = 6;
  reserved                                               7 ;
  bytes                          signature             = 8;
  google.protobuf.Any            value                 = 9  [deprecated = true];  // Prefer value_hash and ConsensusMsg.values.
  google.protobuf.Any            prepared_value        = 10 [deprecated = true]; // Prefer prepared_value_hash and ConsensusMsg.values.
  bytes                          value_hash            = 11;
  bytes                          prepared_value_hash   = 12;
}

message ConsensusMsg {
  QBFTMsg                      msg           = 1;
  repeated QBFTMsg             justification = 2;
  repeated google.protobuf.Any values        = 3;
}

message SniffedConsensusMsg {
  google.protobuf.Timestamp timestamp = 1;
  ConsensusMsg          msg           = 2;
}

message SniffedConsensusInstance {
  google.protobuf.Timestamp started_at = 1;
  int64                          nodes = 2;
  int64                       peer_idx = 3;
  repeated SniffedConsensusMsg    msgs = 4;
}

message SniffedConsensusInstances {
  repeated SniffedConsensusInstance instances = 1;
  string git_hash = 2;
}
